Fix dark mode code blocks

--- a/_sass/theme/_dark.scss
+++ b/_sass/theme/_dark.scss
@@ -40,6 +40,7 @@ html[data-theme="dark"] {
     --global-border-color               : #{$background-light};
     --global-code-background-color      : #333333;
     --global-code-text-color            : #e0e0e0;
+    --global-code-border-color          : #444444;
     --global-fig-caption-color          : #{$dark-gray};
     --global-link-color                 : #{$link};
     --global-link-color-hover           : #{$link-dark};
